# drankspel

./: README.md  docker-compose.yml.example
.github/workflows/: docker.yaml  linting.yaml  testing.yaml
backend/: Dockerfile  pyproject.toml
backend/website/drankspel/: admin.py  services.py  urls.py
backend/website/drankspel/api/: serializers.py  urls.py  views.py
backend/website/drankspel/dialogflow/: models.py
backend/website/drankspel/management/commands/: reset_dialogflow_agent.py
backend/website/drankspel/settings/: settings.py
backend/website/games/dialogflow/: handlers.py  intents.py
frontend/: .eslintrc.js  Dockerfile  package.json
