[tool.poetry]
name = "drankspel"
version = "0.1.0"
description = "A random drinking game picker"
authors = ["Lars van Rhijn <larsvanrhijn@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.10"
uWSGI = "^2.0.19"
psycopg2-binary = "^2.8.6"
djangorestframework = "^3.12.4"
django-oauth-toolkit = "^2.2.0"
uritemplate = "^4.1.1"
django-cors-headers = "^3.7.0"
django-tinymce = "^3.5.0"
dialogflow = "^1.1.0"

[tool.poetry.dev-dependencies]
pydocstyle = "^6.1.1"
black = "^22.3.0"
flake8 = "^6.0.0"
coverage = "^6.5.0"

[tool.black]
line-length = 119
target-version = ["py37"]
exclude = '''
/(
  migrations
  | website/drankspel/settings
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
