[tool.poetry]
name = "drankspel"
version = "0.1.0"
description = "A random drinking game picker"
authors = ["Lars van Rhijn <larsvanrhijn@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.3"
djangorestframework = "^3.16.0"
django-oauth-toolkit = "^3.0.1"
uritemplate = "^4.2.0"
django-cors-headers = "^4.7.0"
django-tinymce = "^4.1.0"
dialogflow = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pydocstyle = "^6.3.0"
black = "^25.1.0"
flake8 = "^7.0.0"
coverage = "^7.9.1"

[tool.poetry.group.prod.dependencies]
uWSGI = "^2.0.30"
psycopg2-binary = "^2.9.10"

[tool.black]
line-length = 119
target-version = ["py311"]
exclude = '''
/(
  migrations
  | website/drankspel/settings
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
